Fix resource leaks in the API and the tooling (#507)